--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,26 @@
 name = "FractionalFrames"
 uuid = "8705e0fd-f78d-442e-aeca-2ea25cd9b08a"
 authors = ["john.papad "]
-version = "0.1.0"
+version = "0.0.1"
+
+[deps]
+ClassicalOrthogonalPolynomials = "b30e2e7b-c4ee-47da-9d5f-2c5c27239acd"
+HypergeometricFunctions = "34004b35-14d8-5ef3-9330-4cdb6864b03a"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MultivariateOrthogonalPolynomials = "4f6956fd-4f93-5457-9149-7bfc4b2ce06d"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+
+[compat]
+ClassicalOrthogonalPolynomials = "0.11"
+HypergeometricFunctions = "0.3.10"
+MultivariateOrthogonalPolynomials = "0.6"
+SpecialFunctions = "2"
+StaticArrays = "1"
+julia = "1.9"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
