--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 ClassicalOrthogonalPolynomials = "0.11, 0.12"
-ContinuumArrays = "0.16"
+ContinuumArrays = "0.16, 0.17"
 HarmonicOrthogonalPolynomials = "0.5"
 HypergeometricFunctions = "0.3.10"
 MultivariateOrthogonalPolynomials = "0.6"
