--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 ClassicalOrthogonalPolynomials = "0.11, 0.12"
 ContinuumArrays = "0.16, 0.17"
 HarmonicOrthogonalPolynomials = "0.5"
-HypergeometricFunctions = "0.3.10"
+HypergeometricFunctions = "=0.3.10"
 MultivariateOrthogonalPolynomials = "0.6"
 SpecialFunctions = "2"
 StaticArrays = "1"
